projects/vb6parse/snapshots/parsers/cst/library/environment/error/error_udt_field.snap
---
source: projects/vb6parse/tests/library/environment/error.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: MemberAccessExpression
          children:
            - kind: Identifier
              text: info
            - kind: PeriodOperator
              text: "."
            - kind: Identifier
              text: Message
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: ErrorKeyword
              text: Error
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: errorNumber
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
